--- a/HaRepacker/GUI/OptionsForm.resx
+++ b/HaRepacker/GUI/OptionsForm.resx
@@ -126,13 +126,13 @@
     <value>12, 12</value>
   </data>
   <data name="sortBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>96, 17</value>
+    <value>187, 17</value>
   </data>
   <data name="sortBox.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
   </data>
   <data name="sortBox.Text" xml:space="preserve">
-    <value>Sort TreeView</value>
+    <value>Sort TreeView by default (slow!)</value>
   </data>
   <data name="&gt;&gt;sortBox.Name" xml:space="preserve">
     <value>sortBox</value>
