--- a/HaRepacker/GUI/SaveForm.resx
+++ b/HaRepacker/GUI/SaveForm.resx
@@ -119,10 +119,14 @@
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="encryptionBox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>75, 12</value>
+    <value>112, 19</value>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="encryptionBox.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
   <data name="encryptionBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>178, 21</value>
+    <value>338, 29</value>
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="encryptionBox.TabIndex" type="System.Int32, mscorlib">
@@ -141,10 +145,13 @@
     <value>5</value>
   </data>
   <data name="saveButton.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1, 93</value>
+    <value>2, 150</value>
+  </data>
+  <data name="saveButton.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
   <data name="saveButton.Size" type="System.Drawing.Size, System.Drawing">
-    <value>263, 27</value>
+    <value>461, 44</value>
   </data>
   <data name="saveButton.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
@@ -165,10 +172,13 @@
     <value>4</value>
   </data>
   <data name="versionBox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>75, 39</value>
+    <value>112, 63</value>
+  </data>
+  <data name="versionBox.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
   <data name="versionBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>178, 22</value>
+    <value>339, 29</value>
   </data>
   <data name="versionBox.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
@@ -192,10 +202,13 @@
     <value>True</value>
   </data>
   <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>27, 41</value>
+    <value>40, 66</value>
+  </data>
+  <data name="label1.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
   </data>
   <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>45, 13</value>
+    <value>62, 21</value>
   </data>
   <data name="label1.TabIndex" type="System.Int32, mscorlib">
     <value>4</value>
@@ -219,10 +232,13 @@
     <value>True</value>
   </data>
   <data name="label2.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 15</value>
+    <value>18, 24</value>
+  </data>
+  <data name="label2.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 0, 4, 0</value>
   </data>
   <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>62, 13</value>
+    <value>84, 21</value>
   </data>
   <data name="label2.TabIndex" type="System.Int32, mscorlib">
     <value>5</value>
@@ -242,20 +258,17 @@
   <data name="&gt;&gt;label2.ZOrder" xml:space="preserve">
     <value>1</value>
   </data>
-  <data name="checkBox_64BitFile.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
   <data name="checkBox_64BitFile.Location" type="System.Drawing.Point, System.Drawing">
-    <value>75, 70</value>
+    <value>44, 105</value>
   </data>
   <data name="checkBox_64BitFile.Size" type="System.Drawing.Size, System.Drawing">
-    <value>166, 17</value>
+    <value>411, 24</value>
   </data>
   <data name="checkBox_64BitFile.TabIndex" type="System.Int32, mscorlib">
-    <value>6</value>
+    <value>0</value>
   </data>
   <data name="checkBox_64BitFile.Text" xml:space="preserve">
-    <value>Save as 64-bit client WZ file</value>
+    <value>Save as 64-bit WZ file (GMS v230+, KMS v1.2.357+)</value>
   </data>
   <data name="&gt;&gt;checkBox_64BitFile.Name" xml:space="preserve">
     <value>checkBox_64BitFile</value>
@@ -273,10 +286,10 @@
     <value>True</value>
   </metadata>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>6, 13</value>
+    <value>9, 21</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>265, 121</value>
+    <value>463, 195</value>
   </data>
   <data name="$this.Font" type="System.Drawing.Font, System.Drawing">
     <value>Segoe UI, 8pt</value>
@@ -2680,6 +2693,9 @@
         +B8AAOAHAADAAwAAgAEAAIABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAAQAAgAEAAMADAADgBwAA
         +B8AAA==
 </value>
+  </data>
+  <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 5, 4, 5</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Save</value>
