--- a/HaCreator/GUI/InstanceEditor/MirrorFieldDataEditor.resx
+++ b/HaCreator/GUI/InstanceEditor/MirrorFieldDataEditor.resx
@@ -1,35 +1,4 @@
-Skip to content
-Search or jump to…
-Pull requests
-Issues
-Marketplace
-Explore
- 
-@SoulGirlJP 
-lastbattle
-/
-Harepacker-resurrected
-Public
-Code
-Issues
-36
-Pull requests
-3
-Actions
-Projects
-Wiki
-Security
-Insights
-Harepacker-resurrected/HaCreator/GUI/InstanceEditor/MirrorFieldDataEditor.resx
-@lastbattle
-lastbattle [HaCreator] added field & render support for 'MirrorFieldData' and 'i…
-…
-Latest commit bb12bcb 27 days ago
- History
- 1 contributor
-120 lines (109 sloc)  5.56 KB
-   
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -84,6 +53,7 @@ Latest commit bb12bcb 27 days ago
     value   : The object must be serialized with 
             : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
             : and then encoded with base64 encoding.
+
     mimetype: application/x-microsoft.net.object.bytearray.base64
     value   : The object must be serialized into a byte array 
             : using a System.ComponentModel.TypeConverter
@@ -148,16 +118,3 @@ Latest commit bb12bcb 27 days ago
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
 </root>
-© 2022 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
-Blog
-About
-Loading complete
