--- a/HaCreator/Properties/Resources.resx
+++ b/HaCreator/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Initialization_Error_MSDirectoryNotExist" xml:space="preserve">
+    <value>The MapleStory directory {0} provided does not exist.</value>
+  </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="mapEditMenu" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\mapEditMenu.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
